Adicionado ícone constelação na barra

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="png" href="././src/assets/images/icons8-constelação-64.png" />
   <meta name="viewport" content="initial-scale=1, width=device-width" />
   <title>Eduardo Felipe</title>
 </head>
